# ech0

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ech0.toml.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: PRD.md
src/: config.rs  conflict.rs  decay.rs  error.rs  graph.rs  lib.rs  linking.rs  main.rs  provenance.rs  schema.rs  search.rs  store.rs  test_stubs.rs  traits.rs  vector.rs  vector_index.rs
src/vector/: hora.rs  mod.rs  usearch.rs
tests/integration/: conflict.rs  ingest.rs  linking.rs  search.rs
