[package]
name = "ech0"
version = "0.1.2"
edition = "2024"
description = "Local-first knowledge graph memory for LLMs. No cloud. No API keys. No data leaving your machine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kura120/ech0"
readme = "README.md"
keywords = ["llm", "memory", "knowledge-graph", "vector-search", "local-first"]
categories = ["database", "data-structures", "science"]

[features]
default = ["dynamic-linking", "importance-decay", "provenance", "contradiction-detection", "tokio", "backend-hora"]
dynamic-linking = []
importance-decay = []
provenance = []
contradiction-detection = []
tokio = ["dep:tokio"]
backend-hora = ["dep:hora"]
backend-usearch = ["dep:usearch"]
full = ["dynamic-linking", "importance-decay", "provenance", "contradiction-detection", "tokio", "backend-hora", "backend-usearch"]

# Internal feature used to expose test stub implementations (StubEmbedder, StubExtractor, etc.)
# to integration tests. Not part of the public API — never enable this in production builds.
# Automatically enabled via [dev-dependencies] self-reference below.
_test-helpers = []

[dependencies]
# Storage
redb = "2"
usearch = { version = "2.24.0", default-features = false, features = ["fp16lib"], optional = true }
hora = { version = "0.1.1", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
unicode-normalization = "0.1"

# Identity
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync", "macros", "rt-multi-thread"], optional = true }

# Observability
tracing = "0.1"



# Config

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"
toml = "0.8"

# Self-reference to enable the _test-helpers feature in test/dev builds so that
# integration tests can access StubEmbedder, StubExtractor, and other test stubs.
ech0 = { path = ".", features = ["_test-helpers"] }

# Use the vendored usearch copy for reproducible builds on Windows (MSVC compatibility).
# This overrides the crates.io version with the local patched copy in third_party/.
[patch.crates-io]
usearch = { path = "third_party/usearch-2.24.0" }

# Tests
[[bin]]
name = "smoke"
path = "src/bin/smoke.rs"

[[test]]
name = "ingest"
path = "tests/integration/ingest.rs"

[[test]]
name = "search"
path = "tests/integration/search.rs"

[[test]]
name = "linking"
path = "tests/integration/linking.rs"

[[test]]
name = "conflict"
path = "tests/integration/conflict.rs"
